Altered html file and added css file

--- a/index.html
+++ b/index.html
@@ -3,50 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aryan's Personal Site</title>
+    <title>Aryan's CV</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <div class="top-container">
+        <h1>I'm Aryan</h1>
+        <p>a <span>pro</span>grammer</p>
+        <img src="images/earth.png" alt="earth">
+        <img src="images/astronaut.png" alt="astronaut">
+    </div>
+    <div class="middle-container">
+        <img src="images/telescope.png" alt="profile">
+        <h1>Hi.</h1>
+        <p>I am a Web Developer. I am a Student at RVITM. I ❤️ playing video games and coding.</p>
+        <h1>Skills</h1>
+        <img src="images/programming.png" alt="coding">
+        <div class="skill-row">
+            <h1>Languages & Frameworks:</h1>
+            <p>Proficient in C, Java, Python, JavaScript, and SQL. Experience with web technologies including HTML, CSS, React.js, and Node.js.</p>
+            <h1>Databases:</h1>
+            <p>Skilled in working with relational databases (MySQL) and NoSQL databases (MongoDB).</p>
+            <h1>Software Development:</h1>
+            <p> Expertise in object-oriented programming (OOP), data structures and algorithms.</p>
+            <h1>Version Control:</h1>
+            <p>Experienced using Git for version control and collaborative development on GitHub.</p>
+        </div>
+    </div>
+    <div class="bottom-container">
     
-    <!-- This is a comment-->
-    <hr>
-    <table cellspacing="20">
-        <tr>
-            <td>
-                <img src="Benny-modified.png" alt="Aryan Picture">
-            </td>
-            <td>
-                <h1>The Great Aryan</h1>
-                <p><em>The Person Whose Game Name is <strong>Kelzier</strong></em> </p>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <h3>Works</h3>
-    <ul>
-        <li>Math Classwork</li>
-        <li>Lab Records</li>
-        <li>Assignments</li>
-    </ul>
-    <hr>
-    <h3>Hobbies</h3>
-    <ol>
-        <li>Reading <a href="https://mangasee123.com/">Manga</a> or <a href="https://asuratoon.com/">Manhwa</a></li>
-        <ol type="a">
-            <li><a href="https://www.webtoons.com/en/action/the-world-after-the-fall/list?title_no=4011">The World After The Fall</a></li>
-            <li><a href="https://www.webtoons.com/en/romance/its-just-business/list?title_no=6201">It’s Just Business</a></li>
-        </ol>
-        <li>Watching <a href="https://youtube.com">Youtube</a></li>
-        <li>Watching <a href="https://animesuge.to/">Anime</a></li>
-        <li>Playing Video Games</li>
-    </ol>
-    <hr size="3" noshade>
-    <center>
-        <h1>The Sunfire Blade</h1>
-        <h3><i>By</i></h3>
-        <h2><i>Kelzier</i></h2>
-    </center>
-    <hr size="3" noshade>
-    <h3>Contact Me</h3>
-    <a href="contact.html">Contact Details</a>
+    </div>
 </body>
 </html>
