Updated styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <div class="top-container">
+        <img class="astronaut" src="images/astronaut.png" alt="astronaut">
         <h1>I'm Aryan</h1>
         <p>a <span>pro</span>grammer</p>
-        <img src="images/earth.png" alt="earth">
-        <img src="images/astronaut.png" alt="astronaut">
+        <img class="earth" src="images/earth.png" alt="earth">
+        
     </div>
     <div class="middle-container">
-        <img src="images/telescope.png" alt="profile">
+        <img class="profile" src="images/telescope.png" alt="profile">
         <h1>Hi.</h1>
         <p>I am a Web Developer. I am a Student at RVITM. I ❤️ playing video games and coding.</p>
         <h1>Skills</h1>
