Updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
         <img class="earth" src="images/earth.png" alt="earth">
         
     </div>
+    <hr>
     <div class="middle-container">
         <img class="profile" src="images/telescope.png" alt="profile">
-        <h1>Hi.</h1>
+        <h2>Hi.</h2>
         <p>I am a Web Developer. I am a Student at RVITM. I ❤️ playing video games and coding.</p>
-        <h1>Skills</h1>
-        <img src="images/programming.png" alt="coding">
+    </div>
+    <hr>
+    <div class="bottom-container">
+        <h2>Skills</h2>
         <div class="skill-row">
-            <h1>Languages & Frameworks:</h1>
+            <img class="code-img" src="images/programming.png" alt="coding">
+            <h3>Languages & Frameworks:</h3>
             <p>Proficient in C, Java, Python, JavaScript, and SQL. Experience with web technologies including HTML, CSS, React.js, and Node.js.</p>
-            <h1>Databases:</h1>
+            <h3>Databases:</h3>
             <p>Skilled in working with relational databases (MySQL) and NoSQL databases (MongoDB).</p>
-            <h1>Software Development:</h1>
+            <h3>Software Development:</h3>
             <p> Expertise in object-oriented programming (OOP), data structures and algorithms.</p>
-            <h1>Version Control:</h1>
+            <h3>Version Control:</h3>
             <p>Experienced using Git for version control and collaborative development on GitHub.</p>
         </div>
     </div>
-    <div class="bottom-container">
-    
-    </div>
+    <hr>
 </body>
 </html>
